Fix spacing issue with Nav bar

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -107,6 +107,7 @@ form.button_to {
   .navbar-right li{
     margin-left: .5em;
     margin-right: .5em;
+    margin-top: .5em
   }
 }
 
